@@ -2,10 +2,11 @@ package com.lambkit.core.api.route;
 
 public class ApiRoute {
 
-	public static final String METHOD = "method";
-	public static final String PARAMS = "params";
+	public static final String API_METHOD = "method";
+	public static final String API_PARAMS = "params";
 	
 	private ApiParamsBuilder paramsBuilder;
+	private ApiStore apiStore;
 	
 	private static final ApiRoute apiRoute = new ApiRoute();
 	
@@ -15,6 +16,23 @@ public class ApiRoute {
 	
 	public ApiRoute() {
 		paramsBuilder = new ApiParamsBuilder();
+		setApiStore(new ApiStore());
+	}
+	
+	public ApiRouteHandler getHandler(String targetName) {
+		return new ApiRouteHandler(targetName);
+	}
+	
+	public void onStart() {
+		apiStore.loadApiFromSerices();
+	}
+	
+	public void addService(Class<?> service) {
+		apiStore.addService(service);
+	}
+	
+	public void addService(Class<?> service, Class<?> implementClass) {
+		apiStore.addService(service, implementClass);
 	}
 
 	public ApiParamsBuilder getParamsBuilder() {
@@ -24,5 +42,12 @@ public class ApiRoute {
 	public void setParamsBuilder(ApiParamsBuilder paramsBuilder) {
 		this.paramsBuilder = paramsBuilder;
 	}
-	
+
+	public ApiStore getApiStore() {
+		return apiStore;
+	}
+
+	public void setApiStore(ApiStore apiStore) {
+		this.apiStore = apiStore;
+	}
 }
