@@ -1,0 +1,10 @@
+package com.lambkit.test.api.route;
+
+import com.lambkit.web.controller.LambkitController;
+
+public class ApiRouteController extends LambkitController {
+
+	public void index() {
+		
+	}
+}
